tests/bad/var_wrong_type.ae
/// fail: Variable type does not match initializer type

def main() {
    let x: i32 = true
}